--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,14 @@ dependencies:
   flutter_bloc: ^9.1.1
   get_it: ^8.0.3
   dartz: ^0.10.1
-  go_router: ^15.2.4
+  go_router: ^16.0.0
   equatable: ^2.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 flutter:
-  uses-material-design: true
+  uses-material-design: true
+  assets:
+    - assets/logo/
+    - assets/images/
