--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dartz: ^0.10.1
   go_router: ^16.0.0
   equatable: ^2.0.7
+  supabase_flutter: ^2.9.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
