--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   supabase_flutter: ^2.9.1
   toastification: ^3.0.3
   shared_preferences: ^2.5.3
+  intl: ^0.20.2
+  cached_network_image: ^3.4.1
+  flutter_localizations:
+    sdk: flutter
+  flutter_screenutil: ^5.9.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -25,3 +30,4 @@ flutter:
   assets:
     - assets/logo/
     - assets/images/
+    - assets/memoji/
