--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  icons_launcher: ^3.0.1
 flutter:
   uses-material-design: true
   assets:
@@ -33,3 +34,4 @@ flutter:
     - assets/images/
     - assets/memoji/
     - assets/icons/
+    - assets/app_icon/
