--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.0
+  hugeicons: ^0.0.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
