--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_svg: ^2.2.0
   hugeicons: ^0.0.11
   currency_picker: ^2.0.21
+  loading_animation_widget: ^1.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
