--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   hugeicons: ^0.0.11
   currency_picker: ^2.0.21
   loading_animation_widget: ^1.3.0
+  http_parser: ^4.1.2
+  image_picker: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
