--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   loading_animation_widget: ^1.3.0
   http_parser: ^4.1.2
   image_picker: ^1.2.0
+  mime: ^2.0.0
+  path: ^1.9.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
