--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   image_picker: ^1.2.0
   mime: ^2.0.0
   path: ^1.9.1
+  flutter_skeleton_ui: ^0.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
