--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   mime: ^2.0.0
   path: ^1.9.1
   flutter_skeleton_ui: ^0.0.6
+  pie_chart_sz: ^1.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
