--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   path: ^1.9.1
   flutter_skeleton_ui: ^0.0.6
   pie_chart_sz: ^1.1.1
+  connectivity_plus: ^7.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
