--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_skeleton_ui: ^0.0.6
   pie_chart_sz: ^1.1.1
   connectivity_plus: ^7.0.0
+  internet_connection_checker: ^1.0.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
