--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   pie_chart_sz: ^1.1.1
   connectivity_plus: ^7.0.0
   internet_connection_checker: ^1.0.0+1
+  uuid: ^4.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
