--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,23 @@ dependencies:
   connectivity_plus: ^7.0.0
   internet_connection_checker: ^1.0.0+1
   uuid: ^4.5.1
+
+  #For the offline mode
+  brick_offline_first_with_supabase: ^2.1.0
+  sqflite: ^2.4.2
+  brick_sqlite: ^4.1.0
+  brick_supabase: ^2.1.0
+  sqflite_common: ^2.5.6
+  brick_core: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   icons_launcher: ^3.0.1
+  brick_offline_first_with_supabase_build: ^2.0.0
+  build_runner: ^2.4.15
+
 flutter:
   uses-material-design: true
   assets:
