--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   brick_supabase: ^2.1.0
   sqflite_common: ^2.5.6
   brick_core: ^2.0.0
+  flutter_native_splash: ^2.4.7
 
 dev_dependencies:
   flutter_test:
