--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite_common: ^2.5.6
   brick_core: ^2.0.0
   flutter_native_splash: ^2.4.7
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
